--- a/build.gradle
+++ b/build.gradle
@@ -14,5 +14,7 @@ repositories {
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    compile group: 'com.opencsv', name: 'opencsv', version: '3.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+
 }
