--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,24 @@ plugins {
     id 'java'
 }
 
-group 'VendingMachine'
-version '1.0-SNAPSHOT'
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'testharness.TestHarness'
+        )
+    }
+}
+
+jar {
+    from {
+        configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
+configurations {
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
 
 sourceCompatibility = 1.8
 
@@ -17,4 +33,7 @@ dependencies {
     compile group: 'com.opencsv', name: 'opencsv', version: '3.7'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
+    extraLibs group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
+    extraLibs group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
+    extraLibs group: 'com.opencsv', name: 'opencsv', version: '3.7'
 }
