--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -7,7 +7,7 @@ appender.file.fileName=VendingMachineLog.log
 appender.file.layout.type=PatternLayout
 appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss} %c{1} - %msg%n
 loggers=file
-logger.file.name=VendingMachine.VendingMachine
+logger.file.name=cointracker.CoinTracker
 logger.file.level = info
 logger.file.appenderRefs = file
 logger.file.appenderRef.file.ref = LOGFILE
